--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "final-form": "^4.20.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-final-form": "^6.5.9",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1"
   },
